--- a/MasterFile/SourceFiles/makefile_Master_Lin_API_64Bit
+++ b/MasterFile/SourceFiles/makefile_Master_Lin_API_64Bit
@@ -1,8 +1,8 @@
 # source files
-SRC = driver.cpp ivf.c psnr.c ssim2.cpp Tests.cpp  Tests-NotUsed.cpp Tools.cpp Arguments.cpp FourCC.cpp md5_utils.cpp utilities.cpp args.cpp ivfdec.cpp ivfenc.cpp y4minput.cpp
+SRC = driver.cpp ivf.c psnr.c ssim2.cpp Tests.cpp  Tools.cpp Arguments.cpp FourCC.cpp md5_utils.cpp utilities.cpp args.cpp ivfdec.cpp ivfenc.cpp y4minput.cpp
 
 # source object files
-SRCOBJ = driver.o ivf.o psnr.o ssim2.o Tests.o Tests-NotUsed.o Tools.o Arguments.o FourCC.o md5_utils.o utilities.o args.o ivfdec.o ivfenc.o y4minput.o
+SRCOBJ = driver.o ivf.o psnr.o ssim2.o Tests.o Tools.o Arguments.o FourCC.o md5_utils.o utilities.o args.o ivfdec.o ivfenc.o y4minput.o
 
 # compiler
 CCC = g++ -m64
@@ -25,9 +25,6 @@ psnr.o: psnr.c
 
 ssim2.o: ssim2.cpp
 	$(CCC) -c ssim2.cpp $(INCLUDE)  $(LFLAGS)
-
-Tests-NotUsed.o: Tests-NotUsed.cpp
-	$(CCC) -c Tests-NotUsed.cpp $(INCLUDE)  $(LFLAGS)
 
 Tests.o: Tests.cpp
 	$(CCC) -c Tests.cpp $(INCLUDE)  $(LFLAGS)
