Updated extern and header declarations
-Removed unused header file declarations
-Removed unused extern declarations
-PSNR now links to testers PSNR

Change-Id: I0d7a8e77433e593cc6ff1ab2c0a2cc58a5d620ab

--- a/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/SourceFiles/makefile_Debug_Arm_API
+++ b/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/SourceFiles/makefile_Debug_Arm_API
@@ -21,7 +21,7 @@ ivf.o: ivf.c
 	$(CCC) -c ivf.c $(INCLUDE)  $(LFLAGS)
 
 psnr.o: psnr.c
-	$(CPP) -c psnr.c $(INCLUDE)  $(LFLAGS)
+	$(CCC) -c psnr.c $(INCLUDE)  $(LFLAGS)
 
 ssim2.o: ssim2.cpp
 	$(CPP) -c ssim2.cpp $(INCLUDE)  $(LFLAGS)
