--- a/MasterFile/SourceFiles/makefile_Master_Lin_API_64Bit
+++ b/MasterFile/SourceFiles/makefile_Master_Lin_API_64Bit
@@ -21,7 +21,7 @@ ivf.o: ivf.c
 	$(CCC) -c ivf.c $(INCLUDE)  $(LFLAGS)
 
 psnr.o: psnr.c
-	$(CCC) -c psnr.c $(INCLUDE)  $(LFLAGS)
+	$(GCC) -c psnr.c $(INCLUDE)  $(LFLAGS)
 
 ssim2.o: ssim2.cpp
 	$(CCC) -c ssim2.cpp $(INCLUDE)  $(LFLAGS)
