--- a/MasterFile/SourceFiles/makefile_Master_Lin_API_Debug
+++ b/MasterFile/SourceFiles/makefile_Master_Lin_API_Debug
@@ -21,7 +21,7 @@ ivf.o: ivf.c
 	$(CCC) -c -g ivf.c $(INCLUDE)  $(LFLAGS)
 
 psnr.o: psnr.c
-	$(CCC) -c -g psnr.c $(INCLUDE)  $(LFLAGS)
+	$(GCC) -c -g psnr.c $(INCLUDE)  $(LFLAGS)
 
 ssim2.o: ssim2.cpp
 	$(CCC) -c -g ssim2.cpp $(INCLUDE)  $(LFLAGS)
