--- a/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/SourceFiles/makefile_Debug_IMac_API_32Bit
+++ b/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/SourceFiles/makefile_Debug_IMac_API_32Bit
@@ -22,7 +22,7 @@ ivf.o: ivf.c
 	$(ICC) -c ivf.c $(INCLUDE) $(LFLAGS) $(DEBUG)
 
 psnr.o: psnr.c
-	$(CPP) -c psnr.c $(INCLUDE) $(LFLAGS) $(DEBUG)
+	$(ICC) -c psnr.c $(INCLUDE) $(LFLAGS) $(DEBUG)
 
 ssim2.o: ssim2.cpp
 	$(CPP) -c ssim2.cpp $(INCLUDE) $(LFLAGS) $(DEBUG)
