--- a/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/SourceFiles/makefile_Release_IMac_Old_API_32Bit
+++ b/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/SourceFiles/makefile_Release_IMac_Old_API_32Bit
@@ -21,7 +21,7 @@ ivf.o: ivf.c
 	$(ICC) -c ivf.c $(INCLUDE) $(LFLAGS)
 
 psnr.o: psnr.c
-	$(CPP) -c psnr.c $(INCLUDE) $(LFLAGS)
+	$(ICC) -c psnr.c $(INCLUDE) $(LFLAGS)
 
 ssim2.o: ssim2.cpp
 	$(CPP) -c ssim2.cpp $(INCLUDE) $(LFLAGS)
