Windows Auto Build sln files added
-Auto build solution files added for windows

Change-Id: I0f01a4d4eca4db52165b9e1d213d3fafb356e431

--- a/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
@@ -156,8 +156,8 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="Vfw32.lib odbc32.lib odbccp32.lib Winmm.lib lib\vpxmt.lib"
-				OutputFile="$(OutDir)/VP8_Tester_API.exe"
+				AdditionalDependencies="Vfw32.lib odbc32.lib odbccp32.lib Winmm.lib lib\vpxmt_32Bit.lib"
+				OutputFile="$(OutDir)/VP8_Tester_API_32Bit.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="1"
