--- a/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/SourceFiles/makefile_Release_Lin_Old_API_64Bit
+++ b/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/SourceFiles/makefile_Release_Lin_Old_API_64Bit
@@ -2,7 +2,7 @@
 SRC = supportingrelease.cpp psnr.c ssim2.cpp Utilities.cpp ivf.c md5_utils.cpp
 
 # source object files
-SRCOBJ = supportingrelease.o ivf.o psnr.o ssim2.o Utilities.o
+SRCOBJ = supportingrelease.o ivf.o psnr.o ssim2.o Utilities.o md5_utils.o
 
 # compiler
 GPP = g++ -m64
