Use same vpx_config.h as was use for lib
-Updated test to inherit configuration settings from
 same vpx_config.h file as was used when it was
 created.
-Updated PrintHeaderInfo function to print arch info

Change-Id: I419b8fd83f7a065618d30eb3975b9e9995ac652a

--- a/MasterFile/SourceFiles/makefile_Master_IMac_API_32Bit
+++ b/MasterFile/SourceFiles/makefile_Master_IMac_API_32Bit
@@ -12,7 +12,7 @@ GCC = gcc -m32
 LFLAGS= -L../lib -lvpx_IMac32 -DINLINE=
 
 #Includes
-INCLUDE = -I ../include -D API -DHAVE_STDINT_H -D CONFIG_MD5=1
+INCLUDE = -I ../include -I ../include/release-32 -D API -DHAVE_STDINT_H -D CONFIG_MD5=1
 
 VP8_Tester_API_32Bit.exe: $(SRCOBJ)
 	$(GPP)  $(INCLUDE) -o "VP8_Tester_API_32Bit.exe" $(SRCOBJ) $(LFLAGS)
