--- a/MasterFile/SourceFiles/makefile_Master_Arm_API
+++ b/MasterFile/SourceFiles/makefile_Master_Arm_API
@@ -12,7 +12,7 @@ GCC = arm-none-linux-gnueabi-gcc
 LFLAGS= -L../lib -lvpx_Arm -lpthread -DINLINE=
 
 #Includes
-INCLUDE = -I ../include -D API -D ARM -DHAVE_STDINT_H -D CONFIG_MD5=1
+INCLUDE = -I ../include -I ../include/release-arm -D API -D ARM -DHAVE_STDINT_H -D CONFIG_MD5=1
 
 VP8_Tester_API: $(SRCOBJ)
 	$(GPP)  $(INCLUDE) -o "VP8_Tester_API.exe" $(SRCOBJ) $(LFLAGS)
