--- a/MasterFile/SourceFiles/makefile_Master_Lin_API_Debug
+++ b/MasterFile/SourceFiles/makefile_Master_Lin_API_Debug
@@ -12,7 +12,7 @@ GCC = gcc -m32 -g
 LFLAGS= -L ../lib -lvpx_Lin32 -lpthread -DINLINE=
 
 #Includes
-INCLUDE = -I ../include -D API -DHAVE_STDINT_H -D CONFIG_MD5=1
+INCLUDE = -I ../include -I ../include/release-32 -D API -DHAVE_STDINT_H -D CONFIG_MD5=1
 
 VP8_Tester_API_32Bit: $(SRCOBJ)
 	$(GPP)  $(INCLUDE) -o "VP8_Tester_API_32Bit.exe" $(SRCOBJ) $(LFLAGS)
