--- a/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
@@ -136,7 +136,7 @@
 				EnableIntrinsicFunctions="false"
 				FavorSizeOrSpeed="0"
 				EnableFiberSafeOptimizations="false"
-				AdditionalIncludeDirectories="include"
+				AdditionalIncludeDirectories="include;&quot;include\release-64&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;ON2_TRACK_MEM_USAGE=1;API;CONFIG_MD5=1"
 				StringPooling="false"
 				RuntimeLibrary="0"
