--- a/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/SourceFiles/makefile_Debug_IMac_API_32Bit
+++ b/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/SourceFiles/makefile_Debug_IMac_API_32Bit
@@ -13,7 +13,7 @@ DEBUG = -g
 LFLAGS= -L../lib -lvpx_MemIMac32 -D CONFIG_MEM_TRACKER=1 -DINLINE=
 
 #Includes
-INCLUDE = -I ../include -I "../HeaderFiles" -D API -D API -DHAVE_STDINT_H
+INCLUDE = -I ../include -I ../include/debug-32 -D API -D API -DHAVE_STDINT_H
 
 VP8vNewest_PlugIn_DLib_DMode_32Bit.exe: $(SRCOBJ)
 	$(GPP) $(INCLUDE) -o "VP8vNewest_PlugIn_DLib_DMode_32Bit.exe" $(SRCOBJ) $(LFLAGS) $(DEBUG)
