--- a/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/SourceFiles/makefile_Debug_IMac_API_64Bit
+++ b/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/SourceFiles/makefile_Debug_IMac_API_64Bit
@@ -13,7 +13,7 @@ DEBUG = -g
 LFLAGS= -L../lib -lvpx_MemIMac64 -D CONFIG_MEM_TRACKER=1 -DINLINE=
 
 #Includes
-INCLUDE = -I ../include -I "../HeaderFiles" -D API -D API -DHAVE_STDINT_H
+INCLUDE = -I ../include -I ../include/debug-64 -D API -D API -DHAVE_STDINT_H
 
 VP8vNewest_PlugIn_DLib_DMode_64Bit.exe: $(SRCOBJ)
 	$(GPP) $(INCLUDE) -o "VP8vNewest_PlugIn_DLib_DMode_64Bit.exe" $(SRCOBJ) $(LFLAGS) $(DEBUG)
