--- a/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/SourceFiles/makefile_Debug_Lin_API_64Bit
+++ b/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/SourceFiles/makefile_Debug_Lin_API_64Bit
@@ -12,7 +12,7 @@ GCC = gcc -m64
 LFLAGS= -L../lib -lpthread -lvpx_MemLin64  -D CONFIG_MEM_TRACKER=1 -DINLINE=
 
 #Includes
-INCLUDE = -I ../include -I "../Header Files" -D API -DHAVE_STDINT_H
+INCLUDE = -I ../include -I ../include/debug-64 -D API -DHAVE_STDINT_H
 
 VP8vNewest_PlugIn_DLib_DMode_64Bit.exe: $(SRCOBJ)
 	$(GPP) $(INCLUDE) -o "VP8vNewest_PlugIn_DLib_DMode_64Bit.exe" $(SRCOBJ) $(LFLAGS)
