--- a/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/SourceFiles/makefile_Release_Arm_New_API
+++ b/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/SourceFiles/makefile_Release_Arm_New_API
@@ -12,7 +12,7 @@ GCC = arm-none-linux-gnueabi-gcc
 LFLAGS= -L../newlib -lpthread -lvpx_NewArm -DINLINE=
 
 #Includes
-INCLUDE = -I ../include -D API -D ARM -D HAVE_STDINT_H
+INCLUDE = -I ../include -I ../include/release-new-arm -D API -D ARM -D HAVE_STDINT_H
 
 VP8vNewest_PlugIn_RLib_RMode.exe: $(SRCOBJ)
 	$(GPP) $(INCLUDE) -o "VP8vNewest_PlugIn_RLib_RMode.exe" $(SRCOBJ) $(LFLAGS)
