--- a/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/SourceFiles/makefile_Release_Arm_Old_API
+++ b/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/SourceFiles/makefile_Release_Arm_Old_API
@@ -12,7 +12,7 @@ GCC = arm-none-linux-gnueabi-gcc
 LFLAGS= -L../oldlib -lpthread -lvpx_OldArm -DINLINE=
 
 #Includes
-INCLUDE = -I ../include -D API -D ARM -D HAVE_STDINT_H
+INCLUDE = -I ../include -I ../include/release-old-arm -D API -D ARM -D HAVE_STDINT_H
 
 VP8vOldest_PlugIn_RLib_RMode.exe: $(SRCOBJ)
 	$(GPP) $(INCLUDE) -o "VP8vOldest_PlugIn_RLib_RMode.exe" $(SRCOBJ) $(LFLAGS)
