--- a/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/SourceFiles/makefile_Release_Lin_New_API_64Bit
+++ b/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/SourceFiles/makefile_Release_Lin_New_API_64Bit
@@ -12,7 +12,7 @@ GCC = gcc -m64
 LFLAGS= -L../newlib -lpthread -lvpx_NewLin64 -DINLINE=
 
 #Includes
-INCLUDE = -I ../include -D API -D HAVE_STDINT_H
+INCLUDE = -I ../include -I ../include/release-new-64 -D API -D HAVE_STDINT_H
 
 VP8vNewest_PlugIn_RLib_RMode_64Bit.exe: $(SRCOBJ)
 	$(GPP) $(INCLUDE) -o "VP8vNewest_PlugIn_RLib_RMode_64Bit.exe" $(SRCOBJ) $(LFLAGS)
