--- a/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/VP8ReleasePlugin_Old64Bit(2008).vcproj
+++ b/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/VP8ReleasePlugin_Old64Bit(2008).vcproj
@@ -46,7 +46,7 @@
 				AdditionalOptions="/QIfist "
 				Optimization="0"
 				InlineFunctionExpansion="0"
-				AdditionalIncludeDirectories="include"
+				AdditionalIncludeDirectories="include;&quot;include\release-old-64&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;VP7_ONLY=1;ON2_TRACK_MEM_USAGE=1;API"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
