Enable debugging symbols by default
Allow easier debugging of test failures. Binary size isn't critical for
this application, so just enable these symbols unconditionally.

Change-Id: I42ebd0a1c48aea55f10600813199884444ca84fb

--- a/MasterFile/SourceFiles/makefile_Master_Lin_API_64Bit
+++ b/MasterFile/SourceFiles/makefile_Master_Lin_API_64Bit
@@ -5,8 +5,8 @@ SRC = driver.cpp ivf.c psnr.c ssim2.cpp Tests.cpp  Tools.cpp Arguments.cpp FourC
 SRCOBJ = driver.o ivf.o psnr.o ssim2.o Tests.o Tools.o Arguments.o FourCC.o md5_utils.o utilities.o args.o ivfdec.o ivfenc.o y4minput.o
 
 # compiler
-GPP = g++ -m64
-GCC = gcc -m64
+GPP = g++ -g -m64
+GCC = gcc -g -m64
 
 # Libraries
 LFLAGS= -L ../lib -lvpx_Lin64 -lpthread -DINLINE=
