--- a/MasterFile/SourceFiles/makefile_Master_Lin_API_32Bit
+++ b/MasterFile/SourceFiles/makefile_Master_Lin_API_32Bit
@@ -5,8 +5,8 @@ SRC = driver.cpp ivf.c psnr.c ssim2.cpp Tests.cpp Tools.cpp Arguments.cpp FourCC
 SRCOBJ = driver.o ivf.o psnr.o ssim2.o Tests.o Tools.o Arguments.o FourCC.o md5_utils.o utilities.o args.o ivfdec.o ivfenc.o y4minput.o
 
 # compiler
-GPP = g++ -m32
-GCC = gcc -m32
+GPP = g++ -g -m32
+GCC = gcc -g -m32
 
 # Libraries
 LFLAGS= -L ../lib -lvpx_Lin32 -lpthread -DINLINE=
