--- a/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/SourceFiles/makefile_Debug_IMac_API_64Bit
+++ b/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/SourceFiles/makefile_Debug_IMac_API_64Bit
@@ -5,8 +5,8 @@ SRC = psnr.c ssim2.cpp Utilities.cpp ivf.c supportingdebug.cpp md5_utils.cpp
 SRCOBJ = psnr.o ssim2.o Utilities.o ivf.o supportingdebug.o md5_utils.o
 
 # compiler
-GPP = g++ -m64
-GCC = gcc -m64
+GPP = g++ -g -m64
+GCC = gcc -g -m64
 DEBUG = -g
 
 # Libraries
