--- a/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/SourceFiles/makefile_Debug_Lin_API_32Bit
+++ b/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/SourceFiles/makefile_Debug_Lin_API_32Bit
@@ -5,8 +5,8 @@ SRC = supportingdebug.cpp psnr.c ssim2.cpp Utilities.cpp ivf.c md5_utils.cpp
 SRCOBJ = supportingdebug.o ivf.o psnr.o ssim2.o Utilities.o md5_utils.o
 
 # compiler
-GPP = g++ -m32
-GCC = gcc -m32
+GPP = g++ -g -m32
+GCC = gcc -g -m32
 
 # Libraries
 LFLAGS= -L../lib -lpthread -lvpx_MemLin32  -D CONFIG_MEM_TRACKER=1 -DINLINE=
