--- a/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/SourceFiles/makefile_Release_IMac_Old_API_64Bit
+++ b/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/SourceFiles/makefile_Release_IMac_Old_API_64Bit
@@ -5,8 +5,8 @@ SRC = psnr.c ssim2.cpp Utilities.cpp ivf.c supportingrelease.cpp md5_utils.cpp
 SRCOBJ = psnr.o ssim2.o Utilities.o ivf.o supportingrelease.o md5_utils.o
 
 # compiler
-GPP = g++ -m64
-GCC = gcc -m64
+GPP = g++ -g -m64
+GCC = gcc -g -m64
 
 # Libraries
 LFLAGS= -L../oldlib -lvpx_OldIMac64 -DINLINE=
