Buffer fix, File closings, makefile consistency
-Fixed a mismatch in calculating buffer levels
-Fixed file closings so that null pointer derefs don’t occur
-Made Utilities.cpp lowercase for supporting files for
 consistency

Change-Id: Iebc826b9822548db53a90e7d525c28dff5d403ed

--- a/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/SourceFiles/makefile_Debug_Lin_API_64Bit
+++ b/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/SourceFiles/makefile_Debug_Lin_API_64Bit
@@ -1,8 +1,8 @@
 # source files
-SRC = supportingdebug.cpp psnr.c ssim2.cpp Utilities.cpp ivf.c md5_utils.cpp
+SRC = supportingdebug.cpp psnr.c ssim2.cpp utilities.cpp ivf.c md5_utils.cpp
 
 # source object files
-SRCOBJ = supportingdebug.o ivf.o psnr.o ssim2.o Utilities.o md5_utils.o
+SRCOBJ = supportingdebug.o ivf.o psnr.o ssim2.o utilities.o md5_utils.o
 
 # compiler
 GPP = g++ -g -m64
@@ -26,8 +26,8 @@ psnr.o: psnr.c
 ssim2.o: ssim2.cpp
 	$(GPP) -c ssim2.cpp $(INCLUDE)  $(LFLAGS)
 
-Utilities.o: Utilities.cpp
-	$(GPP) -c Utilities.cpp $(INCLUDE)  $(LFLAGS)
+utilities.o: utilities.cpp
+	$(GPP) -c utilities.cpp $(INCLUDE)  $(LFLAGS)
 
 supportingdebug.o: supportingdebug.cpp
 	$(GPP) -c supportingdebug.cpp $(INCLUDE)  $(LFLAGS)
