--- a/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/SourceFiles/makefile_Debug_IMac_API_64Bit
+++ b/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/SourceFiles/makefile_Debug_IMac_API_64Bit
@@ -1,8 +1,8 @@
 # source files
-SRC = psnr.c ssim2.cpp Utilities.cpp ivf.c supportingdebug.cpp md5_utils.cpp
+SRC = psnr.c ssim2.cpp utilities.cpp ivf.c supportingdebug.cpp md5_utils.cpp
 
 # source object files
-SRCOBJ = psnr.o ssim2.o Utilities.o ivf.o supportingdebug.o md5_utils.o
+SRCOBJ = psnr.o ssim2.o utilities.o ivf.o supportingdebug.o md5_utils.o
 
 # compiler
 GPP = g++ -g -m64
@@ -27,8 +27,8 @@ psnr.o: psnr.c
 ssim2.o: ssim2.cpp
 	$(GPP) -c ssim2.cpp $(INCLUDE) $(LFLAGS) $(DEBUG)
 
-Utilities.o: Utilities.cpp
-	$(GPP) -c Utilities.cpp $(INCLUDE) $(LFLAGS) $(DEBUG)
+utilities.o: utilities.cpp
+	$(GPP) -c utilities.cpp $(INCLUDE) $(LFLAGS) $(DEBUG)
 
 supportingdebug.o: supportingdebug.cpp
 	$(GPP) -c supportingdebug.cpp $(INCLUDE) $(LFLAGS) $(DEBUG)
