--- a/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/SourceFiles/makefile_Release_IMac_New_API_32Bit
+++ b/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/SourceFiles/makefile_Release_IMac_New_API_32Bit
@@ -1,8 +1,8 @@
 # source files
-SRC = psnr.c ssim2.cpp Utilities.cpp ivf.c supportingrelease.cpp md5_utils.cpp
+SRC = psnr.c ssim2.cpp utilities.cpp ivf.c supportingrelease.cpp md5_utils.cpp
 
 # source object files
-SRCOBJ = psnr.o ssim2.o Utilities.o ivf.o supportingrelease.o md5_utils.o
+SRCOBJ = psnr.o ssim2.o utilities.o ivf.o supportingrelease.o md5_utils.o
 
 # compiler
 GPP = g++ -g -m32
@@ -26,8 +26,8 @@ psnr.o: psnr.c
 ssim2.o: ssim2.cpp
 	$(GPP) -c ssim2.cpp $(INCLUDE) $(LFLAGS)
 
-Utilities.o: Utilities.cpp
-	$(GPP) -c Utilities.cpp $(INCLUDE) $(LFLAGS)
+utilities.o: utilities.cpp
+	$(GPP) -c utilities.cpp $(INCLUDE) $(LFLAGS)
 
 supportingrelease.o: supportingrelease.cpp
 	$(GPP) -c supportingrelease.cpp $(INCLUDE)$(LFLAGS)
