Windows library name change for consistency
Naming conventions for windows libraries
now consistent with conventions for Linux and
Mac

Change-Id: Ic8540215724530725cc837902015d57434573cd5

--- a/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
@@ -156,7 +156,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="Vfw32.lib odbc32.lib odbccp32.lib Winmm.lib lib\vpxmt_32Bit.lib"
+				AdditionalDependencies="Vfw32.lib odbc32.lib odbccp32.lib Winmm.lib lib\vpxmt_Win32.lib"
 				OutputFile="$(OutDir)/VP8_Tester_API_32Bit.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
@@ -341,6 +341,4 @@
 			>
 		</Filter>
 	</Files>
-	<Globals>
-	</Globals>
 </VisualStudioProject>
