--- a/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
@@ -158,7 +158,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="Vfw32.lib odbc32.lib odbccp32.lib Winmm.lib lib\vpxmt_64Bit.lib"
+				AdditionalDependencies="Vfw32.lib odbc32.lib odbccp32.lib Winmm.lib lib\vpxmt_Win64.lib"
 				OutputFile="$(OutDir)/VP8_Tester_API_64Bit.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
