--- a/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/VP8DebugPlugin_32Bit(2008).vcproj
+++ b/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/VP8DebugPlugin_32Bit(2008).vcproj
@@ -66,7 +66,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="Vfw32.lib odbc32.lib odbccp32.lib Winmm.lib lib\vpxmtd_32Bit.lib"
+				AdditionalDependencies="Vfw32.lib odbc32.lib odbccp32.lib Winmm.lib lib\vpxmtd_MemWin32.lib"
 				OutputFile="$(OutDir)/VP8vNewest_PlugIn_DLib_DMode_32Bit.exe"
 				LinkIncremental="2"
 				IgnoreDefaultLibraryNames="libm.lib, libirc.lib, libmmt.lib"
@@ -269,6 +269,4 @@
 			>
 		</Filter>
 	</Files>
-	<Globals>
-	</Globals>
 </VisualStudioProject>
