--- a/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/VP8DebugPlugin_64Bit(2008).vcproj
+++ b/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/VP8DebugPlugin_64Bit(2008).vcproj
@@ -154,7 +154,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="Vfw32.lib odbc32.lib odbccp32.lib Winmm.lib lib\vpxmtd_64Bit.lib"
+				AdditionalDependencies="Vfw32.lib odbc32.lib odbccp32.lib Winmm.lib lib\vpxmtd_MemWin64.lib"
 				OutputFile="$(OutDir)/VP8vNewest_PlugIn_DLib_DMode_64Bit.exe"
 				LinkIncremental="2"
 				IgnoreDefaultLibraryNames="libm.lib, libirc.lib, libmmt.lib"
