--- a/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/VP8ReleasePlugin_New64Bit(2008).vcproj
+++ b/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/VP8ReleasePlugin_New64Bit(2008).vcproj
@@ -334,7 +334,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="Vfw32.lib odbc32.lib odbccp32.lib Winmm.lib newlib\vpxmt_64Bit.lib"
+				AdditionalDependencies="Vfw32.lib odbc32.lib odbccp32.lib Winmm.lib newlib\vpxmt_NewWin64.lib"
 				OutputFile="$(OutDir)/VP8vNewest_PlugIn_RLib_RMode_64Bit.exe"
 				LinkIncremental="2"
 				IgnoreDefaultLibraryNames=""
