Update solution files to match lin mac build system
-Updated solution files to output files in the same
  way that linux and mac does.

Change-Id: I0338df6718e674f200992d1fed75c20ccf92bdf6

--- a/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
@@ -102,8 +102,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="Release"
-			IntermediateDirectory="Release"
+			OutputDirectory="build\build-win32"
+			IntermediateDirectory="build\build-win32"
 			ConfigurationType="1"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="0"
@@ -341,4 +341,6 @@
 			>
 		</Filter>
 	</Files>
+	<Globals>
+	</Globals>
 </VisualStudioProject>
