--- a/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/VP8DebugPlugin_32Bit(2008).vcproj
+++ b/SupportingPlugInFiles/VP8DebugPlugIn/MasterFile/VP8DebugPlugin_32Bit(2008).vcproj
@@ -18,8 +18,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="Debug"
-			IntermediateDirectory="Debug"
+			OutputDirectory="build\build-win32"
+			IntermediateDirectory="build\build-win32"
 			ConfigurationType="1"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="0"
@@ -269,4 +269,6 @@
 			>
 		</Filter>
 	</Files>
+	<Globals>
+	</Globals>
 </VisualStudioProject>
