--- a/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/VP8ReleasePlugin_Old32Bit(2008).vcproj
+++ b/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/VP8ReleasePlugin_Old32Bit(2008).vcproj
@@ -101,8 +101,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="Release"
-			IntermediateDirectory="Release"
+			OutputDirectory="build\build-win32-old"
+			IntermediateDirectory="build\build-win32-old"
 			ConfigurationType="1"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="0"
