skeleton for test constrained quality added
- skeleton for test constrained quality added
  current state does not yet run constrained
  quality compression and preforms only
  basic checks for psnr and data rate numbers

Change-Id: Icc0ae80d1396cf00f2058b72f2daabae1da36d89

--- a/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
@@ -241,6 +241,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\tests\test_constrained_quality.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\tests\test_data_rate.cpp"
 					>
 				</File>
