--- a/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
@@ -235,6 +235,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\tests\test_constrained_quality.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\tests\test_data_rate.cpp"
 					>
 				</File>
