namespace std update
- was previously using namespace std updated
  to more correct std:: method.

Change-Id: I16b6c2f26bac736bc3a19c0394e947bfb01a7587

--- a/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
@@ -398,7 +398,7 @@
 						>
 					</File>
 					<File
-						RelativePath=".\src\util\vpx\ivf.c"
+						RelativePath=".\src\util\vpx\ivf.cpp"
 						>
 					</File>
 					<File
@@ -422,7 +422,7 @@
 					Name="psnr"
 					>
 					<File
-						RelativePath=".\src\util\psnr\psnr.c"
+						RelativePath=".\src\util\psnr\psnr.cpp"
 						>
 					</File>
 					<File
