--- a/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/VP8ReleasePlugin_New64Bit(2008).vcproj
+++ b/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/VP8ReleasePlugin_New64Bit(2008).vcproj
@@ -393,7 +393,7 @@
 					Name="vpx"
 					>
 					<File
-						RelativePath="..\..\..\MasterFile\src\util\vpx\ivf.c"
+						RelativePath="..\..\..\MasterFile\src\util\vpx\ivf.cpp"
 						>
 					</File>
 					<File
@@ -405,7 +405,7 @@
 					Name="psnr"
 					>
 					<File
-						RelativePath="..\..\..\MasterFile\src\util\psnr\psnr.c"
+						RelativePath="..\..\..\MasterFile\src\util\psnr\psnr.cpp"
 						>
 					</File>
 					<File
