--- a/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/VP8ReleasePlugin_Old32Bit(2008).vcproj
+++ b/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/VP8ReleasePlugin_Old32Bit(2008).vcproj
@@ -214,7 +214,7 @@
 					Name="psnr"
 					>
 					<File
-						RelativePath="..\..\..\MasterFile\src\util\psnr\psnr.c"
+						RelativePath="..\..\..\MasterFile\src\util\psnr\psnr.cpp"
 						>
 					</File>
 					<File
@@ -226,7 +226,7 @@
 					Name="vpx"
 					>
 					<File
-						RelativePath="..\..\..\MasterFile\src\util\vpx\ivf.c"
+						RelativePath="..\..\..\MasterFile\src\util\vpx\ivf.cpp"
 						>
 					</File>
 					<File
