--- a/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
@@ -45,7 +45,7 @@
 				AdditionalOptions="/QIfist "
 				Optimization="0"
 				InlineFunctionExpansion="0"
-				AdditionalIncludeDirectories="include"
+				AdditionalIncludeDirectories="include;&quot;include\release-32&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;VP7_ONLY=1;ON2_TRACK_MEM_USAGE=1;API;_CRTDBG_MAP_ALLOC;CONFIG_MD5"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
