arnr test added
-test_arnr added
-several const updates

Change-Id: I76e413e0538dd61e29b867d222845e07eb8f1bd4

--- a/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
@@ -221,6 +221,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\tests\test_arnr.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\tests\test_auto_key_frame.cpp"
 					>
 				</File>
