test_vpx_matches_int added
Added new test to check to make sure that
vpxenc matches the internal compressor
and that vpxdec matches the internal
decompressor.

Change-Id: Ia3f063d3d0f7489c445def22ef2f5ddc6da4b3bc

--- a/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
@@ -361,6 +361,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\tests\test_vpx_matches_int.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\tests\test_win_lin_mac_match.cpp"
 					>
 				</File>
