--- a/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_32Bit(2008).vcproj
@@ -359,6 +359,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\tests\test_vpx_matches_int.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\tests\test_win_lin_mac_match.cpp"
 					>
 				</File>
