--- a/MasterFile/Vp8TestProgram_32Bit_icc(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_32Bit_icc(2008).vcproj
@@ -46,7 +46,7 @@
 				Optimization="0"
 				InlineFunctionExpansion="0"
 				AdditionalIncludeDirectories="include;&quot;include\release-32&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;VP7_ONLY=1;ON2_TRACK_MEM_USAGE=1;API;_CRTDBG_MAP_ALLOC;CONFIG_MD5"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;VP7_ONLY=1;ON2_TRACK_MEM_USAGE=1;API;_CRTDBG_MAP_ALLOC;CONFIG_MD5;COMP_ICC"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -135,7 +135,7 @@
 				FavorSizeOrSpeed="0"
 				EnableFiberSafeOptimizations="false"
 				AdditionalIncludeDirectories="include;&quot;include\release-32&quot;"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;ON2_TRACK_MEM_USAGE=1;API;CONFIG_MD5=1"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;ON2_TRACK_MEM_USAGE=1;API;CONFIG_MD5=1;COMP_ICC"
 				StringPooling="false"
 				RuntimeLibrary="0"
 				BufferSecurityCheck="false"
