--- a/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
@@ -47,7 +47,7 @@
 				Optimization="0"
 				InlineFunctionExpansion="0"
 				AdditionalIncludeDirectories="include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;VP7_ONLY=1;ON2_TRACK_MEM_USAGE=1;API;_CRTDBG_MAP_ALLOC;CONFIG_MD5"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;VP7_ONLY=1;ON2_TRACK_MEM_USAGE=1;API;_CRTDBG_MAP_ALLOC;CONFIG_MD5;COMP_VS"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
