--- a/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/VP8ReleasePlugin_Old32Bit_icc(2008).vcproj
+++ b/SupportingPlugInFiles/VP8ReleasePlugIn/MasterFile/VP8ReleasePlugin_Old32Bit_icc(2008).vcproj
@@ -134,7 +134,7 @@
 				FavorSizeOrSpeed="1"
 				EnableFiberSafeOptimizations="false"
 				AdditionalIncludeDirectories="..\..\..\MasterFile\include;&quot;include\release-old-32&quot;"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;ON2_TRACK_MEM_USAGE=1;API"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;ON2_TRACK_MEM_USAGE=1;API;COMP_ICC"
 				StringPooling="false"
 				RuntimeLibrary="0"
 				BufferSecurityCheck="false"
