test_multithreaded_dec added test_multithreaded renamed
test_multithreaded_dec added test_multithreaded renamed
to test_multithreaded_enc.

Change-Id: I08733b0fe3638a9442390859b3b59529a035d8cd

--- a/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_64Bit(2008).vcproj
@@ -305,7 +305,11 @@
 					>
 				</File>
 				<File
-					RelativePath=".\src\tests\test_multithreaded.cpp"
+					RelativePath=".\src\tests\test_multithreaded_dec.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\src\tests\test_multithreaded_enc.cpp"
 					>
 				</File>
 				<File
