--- a/MasterFile/Vp8TestProgram_32Bit_icc(2008).vcproj
+++ b/MasterFile/Vp8TestProgram_32Bit_icc(2008).vcproj
@@ -303,7 +303,11 @@
 					>
 				</File>
 				<File
-					RelativePath=".\src\tests\test_multithreaded.cpp"
+					RelativePath=".\src\tests\test_multithreaded_dec.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\src\tests\test_multithreaded_enc.cpp"
 					>
 				</File>
 				<File
